# emias

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt
include/emias/: bot_instance.hpp  full_state.hpp  global_instance.hpp  process_fullstate.hpp  request.hpp  update_fullstate.hpp
include/emias/tools/: cyrillic_unicode.hpp  timer.hpp
src/: CMakeLists.txt  bot_instance.cpp  full_state.cpp  global_instance.cpp  main.cpp  process_fullstate.cpp  request.cpp  update_fullstate.cpp
src/tools/: cyrillic_unicode.cpp
