cmake_minimum_required(VERSION 3.27.9)
project(emias VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_CXX_EXTENSIONS NO)

include(GNUInstallDirs)
if (BUILD_SHARED_LIBS)
    file(RELATIVE_PATH relDir1
            ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}
            ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
    file(RELATIVE_PATH relDir2
            ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}
            ${CMAKE_INSTALL_PREFIX}/lib)
    set(CMAKE_INSTALL_RPATH $ORIGIN $ORIGIN/${relDir1} $ORIGIN/${relDir2})
endif()

add_subdirectory(thirdparty)
add_subdirectory(src)

if (EMIAS_BUILD_DOCS)
    add_subdirectory(docs)
    install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/docs/html
            DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/docs)
endif()

install(TARGETS ${PROJECT_NAME}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/full_state.json
        DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR})
